grammar.txt
========================================
What's in a Markdown?
What's in a HTML file?
========================================

Header
Paragraph (body)
Tables
Bullet points
Number points
Horizontal line (page divider?)
Footer

========================================
What formatting features are available?
========================================

Code snippets
Italic
Bold
Underline
URL links
Anchor link


---
Grammar in prioritised order
---

document            ->  section*
section             ->  heading
                        | table
                        | bullet-list
                        | number-list
                        | code
                        | image
                        | paragraph
heading              ->  ("#")+ (SPACE | TAB)+ content
bullet-list         ->  "-" (SPACE | TAB)+ content
number-list         ->  NUMBER "." (SPACE | TAB)+ content
paragraph           ->  content
content             ->  (STRING | NUMBER | SPACE | TAB | inline-code | link)+ (NEWLINE | EOF)
inline-code         ->  "`" (STRING | NUMBER | SPACE | TAB)+ "`"
code                ->  "```" (STRING | NUMBER | SPACE | TAB)+ NEWLINE "```"
image               ->  "!" "[" (STRING | NUMBER | SPACE | TAB)+ "]" "(" STRING ")" (NEWLINE | EOF)
link                ->  "[" (STRING | NUMBER | SPACE | TAB)+ "]" "(" STRING ")"


NUMBER              -> ("0" | ... | "9")+
STRING              -> (ALPHANUMBERIC | SPECIAL-CHARACTER )+
SPACE               -> " "
TAB                 -> "\t"
NEWLINE             -> "\n"
EOF                 -> "\0"

reserved special characters
- _     underscore
- *     asterisk
- !     exclamation
- ( )   left paren / right paren
- [ ]   left bracket / right bracket
- < >   left angled bracket / right angled bracket (need to be escaped in HTML)
- .
- #
- `

========================================
Features (To-Do)
========================================
- Nested lists
- Tables
